syntax = "proto2";

package tutorial;

option java_package = "com.mohsenoid.protobuftest";
option java_outer_classname = "EcgProtos";

message Ecg {
    required int32 dateStart = 1;
    required int32 dateEnd = 2;
    required int32 frequency = 3;

    repeated int32 dataSet = 4 [packed=true];
}